--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,7 @@
  *= require_tree .
  */
 header{
+	position: relative;
 	background-color: #4E78A0;
 	text-align: center;
 	width: 100%;
@@ -31,9 +32,11 @@ h1{
 	margin-top: -180px;
 }
 th{
+ border: 1px;
  padding-right: 30px;
 }
 td{
+ border: 1px;
  padding-right: 30px;
 }
 
