--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,5 +1,5 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
+
+/* * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
  *
  * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
@@ -11,33 +11,62 @@
  *= require_self
  *= require_tree .
  */
+a{
+	color:black;
+	
+}
+a:hover{
+	text-decoration: none;
+	}
+*{
+   margin:0;
+   padding:0;
+   font-family: Arial;
+}
 header{
 	position: relative;
-	background-color: #4E78A0;
-	text-align: center;
-	width: 100%;
-	height: 45px;	
-	box-shadow: black 3px 3px 3px 
+	background-image:url("bg.jpg");
+	text-align: left;
+	width: 600;
+	height: 300px;	
+	box-shadow: black 3px 3px 3px
+	-webkit-box-shadow: 0px 2px 18px 4px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 2px 18px 4px rgba(0,0,0,0.75);
+	box-shadow: 0px 2px 18px 4px rgba(0,0,0,0.75);
+}
+context {
+	margin: 0 auto;
+	width: 200px;
 }
 h1{
-	color: black;
-	text-shadow: grey 1.5px 1px 1px
+	font-size: 70px;
+	color: white;
+	text-shadow: grey 3px 3px 3px ;
+
 }
 #main {
 	float: right;
-	margin-top: -140px;
+	margin-top: -63px;
 }
-#main_recipe{
-	float: right;
-	margin-top: -180px;
-}
+
 th{
- border: 1px;
+ font-size: 30px;
+ width: 0%;
  padding-right: 30px;
+ padding-left: 0px;
+
 }
 td{
  border: 1px;
- padding-right: 30px;
+ width: 30%;
+ padding-left: 20px;
 }
+body{
+	margin-left: 12%;
+	float: left;
+	width: 800px;
 
-
+}
+table {
+	margin-top: 10px;
+}
