--- a/app/views/chefs/show.html.erb
+++ b/app/views/chefs/show.html.erb
@@ -1,12 +1,12 @@
 <header><h1>Show Chef </h1></header>
 <br>
+<div id="chef_show">
 <fieldset>
+
 <h3>Name: <%=  @chef.name %></h2>
-
-
 <h3>Speciality: <%= @chef.speciality %></h3>
-
 <h3>Tv show: <%= @chef.show %></h3>
 <div id="main"><%= image_tag(@chef.avatar, style: 'width: 150px') %></div>
 </fieldset>
+</div>
 <%= link_to('edit', edit_chef_path(@chef.id))%>
